prevent overlap with stars
(I can do better than this, just not right now ;) )

--- a/static/grid.css
+++ b/static/grid.css
@@ -37,6 +37,7 @@
 
   h3 {
     padding-top: 0;
+    padding-right: 4em;
     margin-top: 0;
     margin-bottom: -4px;
 
